--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
