--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -17,12 +17,14 @@
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "npm": "^10.2.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
