--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -22,7 +22,8 @@
     "react-native-calendars": "^1.1302.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
