--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-navigation": "^5.0.0",
