--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "node src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "joi": "^17.11.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
-    "sequelize": "^6.35.1"
+    "netlify-lambda": "^2.0.16",
+    "sequelize": "^6.35.1",
+    "serverless-http": "^3.2.0"
   }
 }
