--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node src/server.js",
-    "start": "node src/server.js"
+    "test": "node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
