--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
-    "sequelize": "^6.35.1"
+    "mongoose": "^8.0.1"
   }
 }
