--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
